# starter-fastapi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml  google-cloudrun-docker.yml
src/starter_fastapi/: __init__.py  main.py
src/starter_fastapi/api/: __init__.py
src/starter_fastapi/api/v1/: __init__.py  router.py
src/starter_fastapi/api/v1/endpoints/: health.py  items.py
src/starter_fastapi/core/: __init__.py  config.py  db.py  exceptions.py  logging.py
src/starter_fastapi/migrations/: env.py
src/starter_fastapi/migrations/versions/: 9b2514e80f8e_initial_migration.py
src/starter_fastapi/models/: __init__.py  item.py
src/starter_fastapi/services/: __init__.py  item_service.py
tests/: __init__.py  conftest.py
tests/test_api/: test_health.py  test_items.py
tests/test_services/: test_item_service.py
